# reproduce-proc-macro

./: Cargo.toml
proc_macro/: Cargo.toml
proc_macro/src/: lib.rs
src/: main.rs
